--- a/package.json
+++ b/package.json
@@ -2,26 +2,41 @@
   "name": "bitexplorer",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@amcharts/amcharts4": "^4.10.19",
-    "@testing-library/jest-dom": "^5.12.0",
-    "@testing-library/react": "^11.2.6",
-    "@testing-library/user-event": "^12.8.3",
-    "apexcharts": "^3.27.1",
+  "devDependencies": {
+    "@babel/preset-react": "^7.14.5",
+    "@svgr/webpack": "^5.5.0",
+    "autoprefixer": "^10.3.7",
+    "babel-loader": "^8.2.2",
     "copy-webpack-plugin": "^9.0.0",
-    "d3": "^6.7.0",
+    "css-loader": "^6.4.0",
+    "eslint": "^7.26.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-import-resolver-typescript": "^2.4.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.3.6",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.1",
     "mini-css-extract-plugin": "^1.6.0",
+    "postcss": "^8.3.9",
+    "postcss-loader": "^6.2.0",
+    "postcss-preset-env": "^6.7.0",
+    "webpack": "^5.36.2",
+    "webpack-cli": "^4.6.0",
+    "webpack-dev-server": "^3.11.2"
+  },
+  "dependencies": {
+    "@amcharts/amcharts4": "^4.10.19",
+    "apexcharts": "^3.27.1",
+    "axios": "^0.23.0",
+    "prop-types": "^15.7.2",
     "randomcolor": "^0.6.2",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.1",
-    "webpack": "^5.36.2",
-    "webpack-cli": "^4.6.0",
-    "webpack-dev-server": "^3.11.2"
+    "react-router-dom": "^5.2.0"
   },
   "scripts": {
     "start": "webpack serve --mode development",
