--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "private": true,
   "devDependencies": {
     "@babel/preset-react": "^7.14.5",
+    "@svgr/core": "^5.5.0",
     "@svgr/webpack": "^5.5.0",
+    "@types/history": "^4.7.8",
+    "@types/react": "^17.0.5",
+    "@types/react-dom": "^17.0.5",
+    "@types/react-router-dom": "^5.1.7",
     "autoprefixer": "^10.3.7",
     "babel-loader": "^8.2.2",
     "copy-webpack-plugin": "^9.0.0",
@@ -23,14 +28,23 @@
     "postcss": "^8.3.9",
     "postcss-loader": "^6.2.0",
     "postcss-preset-env": "^6.7.0",
+    "source-map-loader": "^3.0.0",
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.4.4",
     "webpack": "^5.36.2",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
     "@amcharts/amcharts4": "^4.10.19",
+    "@svgr/core": "^5.5.0",
+    "@types/history": "^4.7.9",
+    "@types/react": "^17.0.30",
+    "@types/react-dom": "^17.0.9",
     "apexcharts": "^3.27.1",
     "axios": "^0.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "history": "^4.10.1",
     "prop-types": "^15.7.2",
     "randomcolor": "^0.6.2",
     "react": "^17.0.2",
